remain 3 js file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
 	<body>
 		<p>please visit the sub dirs</p>
+		<a href="l0">10KB TEST</a></br>
+		<a href="l1">50KB TEST</a></br>
+		<a href="l2">100KB TEST</a></br>
+		<a href="l3">500KB TEST</a></br>
+		<a href="l4">1MB TEST</a></br>
 	</body>
-
+	<style>
+		a {display: block;}
+	</style>
 </html>
